--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ p{
   font-weight: bold;
   color: hsl(0, 0%, 0%, 0.75);
 }
-.decDisplay{
+.descDisplay{
   font-style: italic;
   font-weight: bold;
   font-size: 2rem;
